--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Seoulmate</title>
     <!-- js-->
     <script src="js/jquery-3.7.1.min.js"></script>
-    <script src="js/jquery.simplyscroll.min.js"></script>
+    <!-- <script src="js/jquery.simplyscroll.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
-    <script src="JS/index.js"></script>
+    <script src="js/index.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"></script>
     <!-- css-->
