--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             >
           </li>
           <li>
-            <a href="">
+            <a href="event.html">
               <div class="festival">
                 <img src="img/festival03.jpg" alt="서울파크 뮤직페스티벌" />
               </div>
